--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,8 +35,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   bulleted_list: ^0.0.1+0.1a
   cupertino_icons: ^1.0.2
+  flutter_screenutil: ^5.5.4
   flutter_svg: ^1.1.5
   font_awesome_flutter: ^10.2.1
+  html: ^0.15.1
   mock_data: ^2.0.0
   table_calendar: ^3.0.7
 
@@ -72,6 +74,7 @@ flutter:
     - assets/images/6gi5koKe6av1YULrp9Gfoffers with pattern [Recovered]-09-01.png
     - assets/images/offers with patternsquare only [Recovered]-05.png
     - assets/images/NoPath - Copy (12).png
+    - assets/images/user.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
