--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,12 @@ flutter:
     - assets/images/offers with patternsquare only [Recovered]-05.png
     - assets/images/NoPath - Copy (12).png
     - assets/images/user.png
+    - assets/images/ChNa09jgm62fBKkVACm4red roses.png
+    - assets/images/2krfAf5eerQ5Is3f9tfVwhite roses.png
+    - assets/images/pkxgKFM0S3vq9cBWxvU0pink roses.png
+    - assets/images/uuvVgrDn1uzTT6x3HCRjShawarma Station.png
+    - assets/images/iig5kU0ixOXfONnrzo5aoffers with patternsquare only [Recovered]-15.png
+    - assets/images/nHW6npLMKREAFYfKVZXFBBQ station.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
