--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   bulleted_list: ^0.0.1+0.1a
+  carousel_slider: ^4.1.1
   cupertino_icons: ^1.0.2
   flutter_screenutil: ^5.5.4
   flutter_svg: ^1.1.5
@@ -81,6 +82,8 @@ flutter:
     - assets/images/uuvVgrDn1uzTT6x3HCRjShawarma Station.png
     - assets/images/iig5kU0ixOXfONnrzo5aoffers with patternsquare only [Recovered]-15.png
     - assets/images/nHW6npLMKREAFYfKVZXFBBQ station.png
+    - assets/images/mQUdQXWL0t38aJj1v2y1offers with patternsquare only [Recovered]-16.png
+    - assets/images/Repeat Grid 1.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
