--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -89,8 +89,12 @@ flutter:
     - assets/images/Icon awesome-building.png
     - assets/images/Icon feather-file-text.png
     - assets/images/Icon metro-profile.png
-    - assets/images/Icon awesome-calendar-check.png
     - assets/images/Icon ionic-ios-add-circle-outline.svg
+    - assets/images/Icon awesome-search.png
+    - assets/images/Icon awesome-clipboard-list.png
+    - assets/images/Icon awesome-clipboard-list.svg
+    - assets/images/Icon awesome-calendar-check.svg
+    - assets/images/Icon awesome-headset.svg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
